- Version 0.5.0:

* Added pan tool, also available in selection tool by middle clicking or holding left & right buttons
* Level view selection is now a tool.
* Geometry tag and levelExit filter now provides auto-completion
* All angles are now displayed in degrees
* 'scalex', 'scaley' attributes are now displayed as a single 'scale' attribute
* 'x', 'y' attributes are now displayed as a single 'pos' or 'center' attribute
* 'width', 'height' attributes are now displayed as a single 'size' attribute


- Version 0.4.0:

* Add child now only propose child that are valid to add to the selected item.
* Added unique identifier generation when adding child
* Added support for cut/copy/paste of node and composite. The element XML is stored in the clipboard and can be used to mess around. Pasting automatically generate unique id.
* Keyboard shortcut for cut/copy/paste/delete works in all views.
* Completion is provided for ball type
* Completion list is now sorted in non case-sensitive order
* Can unset a mandatory attribute by inputing an empty string
* Added id/name column in tree view
* Added 'group' icon for each element in tree view
* Added issue detection system:
  - invalid attribute value (reference to non existing id)
  - missing children (for example a camera must have at least one 'poi')
  In the tree view, issues are shown in the tree view as a red symbol overlay on top of the group icon.
  In the property list, property name turn red when there is an issue
  In both case, a tooltip will provide information about the issue(s) on the element/attribute

Fixed bugs:
* In property list, property name does not change to bold once the property is set
* many metawog model bugs, major blocking one was the missing water attribute on linearforcefield


- Version 0.3.1:
* Fixed bug that prevented adding/editing a new pipe in a level


- Version 0.3.0:

* Added support for adding/removing object in level, scene and resourc file