@@ -1,13 +1,14 @@
 - Version 0.5.0:
 
-* Added pan tool, also available in selection tool by middle clicking or holding left & right buttons
 * Level view selection is now a tool.
+* Selection tool in level view can cycle through item under mouse if Alt key is pressed
+* Added pan tool, also available in selection tool by middle clicking or holding left & right buttons
+* Added move/rotate tool for most elements, and resize tool for circle.
 * Geometry tag and levelExit filter now provides auto-completion
 * All angles are now displayed in degrees
 * 'scalex', 'scaley' attributes are now displayed as a single 'scale' attribute
 * 'x', 'y' attributes are now displayed as a single 'pos' or 'center' attribute
 * 'width', 'height' attributes are now displayed as a single 'size' attribute
-
 
 - Version 0.4.0:
 
